@@ -68,6 +68,7 @@ Version 2.1.0
      extensions
    - Get encoding and character set of "text" "plain" part (IMAP4)
    - Updated intltool utilities to version 0.32.1
+   - Ported local mailbox detection code from 2.0.3 to 2.1.0
 	
 Version 2.0.3
   * Roland Stigge:
